[ci] Enable bitstream caching for the integrated repo
Caching will occur only on builds from the master branch.

Signed-off-by: Alexander Williams <awill@opentitan.org>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -498,7 +498,7 @@ jobs:
     - chip_darjeeling_cw310
     - chip_earlgrey_cw310
     - chip_earlgrey_cw310_hyperdebug
-  condition: false
+  condition: eq(variables['Build.SourceBranchName'], 'master')
   steps:
     - template: ci/download-artifacts-template.yml
       parameters:
