--- a/mypy.ini
+++ b/mypy.ini
@@ -1,2 +1,6 @@
 [mypy-mistletoe]
 ignore_missing_imports = True
+[mypy-wget]
+ignore_missing_imports = True
+[mypy-semantic_version]
+ignore_missing_imports = True
