[rv_dm_v1] Append `_v1` to all occurrences of `rv_dm`
This prevents naming collisions with non-v1 `rv_dm` code.  Whether
really all names such have such a suffix (e.g., tests items?) is
debatable, but renaming everything is just the simplest option at this
point.

Signed-off-by: Andreas Kurth <adk@lowrisc.org>

--- a/hw/ip/BUILD
+++ b/hw/ip/BUILD
@@ -35,6 +35,7 @@ filegroup(
         "//hw/ip/rstmgr:all_files",
         "//hw/ip/rv_core_ibex:all_files",
         "//hw/ip/rv_dm:all_files",
+        "//hw/ip/rv_dm_v1:all_files",
         "//hw/ip/rv_timer:all_files",
         "//hw/ip/spi_device:all_files",
         "//hw/ip/spi_host:all_files",
@@ -78,6 +79,7 @@ filegroup(
         "//hw/ip/rstmgr:cores",
         "//hw/ip/rv_core_ibex:cores",
         "//hw/ip/rv_dm:cores",
+        "//hw/ip/rv_dm_v1:cores",
         "//hw/ip/rv_timer:cores",
         "//hw/ip/spi_device:cores",
         "//hw/ip/spi_host:cores",
