--- a/hw/ip/rv_dm_v1/dv/cov/cover_reg_top.cfg
+++ b/hw/ip/rv_dm_v1/dv/cov/cover_reg_top.cfg
@@ -6,17 +6,17 @@
 +node tb.dut jtag_*
 
 // Non-RTL assertion only blocks.
--moduletree rv_dm_regs_csr_assert_fpv
+-moduletree rv_dm_v1_regs_csr_assert_fpv
 
 begin assert
-  +moduletree rv_dm_regs_csr_assert_fpv
+  +moduletree rv_dm_v1_regs_csr_assert_fpv
 end
 
 // The JTAG DTM is functionally verified, even in CSR tests.
 begin line+cond+fsm+branch+assert
   +moduletree dmi_jtag
-  +moduletree rv_dm_regs_reg_top
-  +moduletree rv_dm_mem_reg_top
+  +moduletree rv_dm_v1_regs_reg_top
+  +moduletree rv_dm_v1_mem_reg_top
   +moduletree tlul_adapter_host
   +moduletree tlul_adapter_sram
   // Verified in FPV
