[darjeeling/sw/lib] Restructure device library for multiple devices
Move ujson device library into new structure
Update references to new directory structure.
Move device arch implementation files into top specific directories
Update references to top specific arch files

Signed-off-by: Daniel Beitel <dbeitel@rivosinc.com>

--- a/sw/device/silicon_creator/lib/drivers/BUILD
+++ b/sw/device/silicon_creator/lib/drivers/BUILD
@@ -463,12 +463,12 @@ cc_test(
     deps = [
         ":pinmux",
         "//hw/top_darjeeling/sw/autogen:top_darjeeling",
-        "//sw/device/lib/arch:sim_dv",
         "//sw/device/silicon_creator/lib/base:chip",
         "//sw/device/silicon_creator/testing:rom_test",
         "//sw/lib/sw/device/base:abs_mmio",
         "//sw/lib/sw/device/base:csr",
         "//sw/lib/sw/device/base:macros",
+        "//sw/top_earlgrey/sw/device/arch:sim_dv",
         "@googletest//:gtest_main",
     ],
 )
