[reggen] Add DMA to makefile and make MuBi regwen width parametric
Signed-off-by: Michael Schaffner <msf@opentitan.org>

--- a/hw/Makefile
+++ b/hw/Makefile
@@ -14,6 +14,7 @@ IPS ?= aes           \
        adc_ctrl      \
        aon_timer     \
        clkmgr        \
+       dma           \
        entropy_src   \
        csrng         \
        edn           \
