[bazel] Add earlgrey tag to pattgen tests to exclude from wildcard runs
Signed-off-by: Harry Callahan <hcallahan@lowrisc.org>

--- a/sw/device/tests/sim_dv/BUILD
+++ b/sw/device/tests/sim_dv/BUILD
@@ -1358,6 +1358,7 @@ opentitan_functest(
 opentitan_functest(
     name = "pattgen_ios_test",
     srcs = ["pattgen_ios_test.c"],
+    tags = ["earlgrey"],
     targets = ["dv"],
     deps = [
         "//hw/top_darjeeling/sw/autogen:top_darjeeling",
