--- a/.bazelrc
+++ b/.bazelrc
@@ -92,6 +92,9 @@ test:local_test_jobs_per_cpus --local_test_jobs=HOST_CPUS*0.22
 # We have verilator tests that take more than an hour to complete
 test --test_timeout=60,300,1500,7200
 
+# Exclude tests which cannot run on Darjeeling (This will be removed for a better mechanism in the future)
+test --test_tag_filters=-earlgrey
+
 # Configuration to run clang-tidy alongside build actions. This is a strict
 # analysis, which will fail the build when any of its checks fail. Enable with
 # `--config=clang_tidy_check`.
