[pinmux] Add parameters to disable hw straps and USB wake
Signed-off-by: Michael Schaffner <msf@opentitan.org>

--- a/hw/top_darjeeling/rdc/chip_darjeeling_asic.env
+++ b/hw/top_darjeeling/rdc/chip_darjeeling_asic.env
@@ -30,5 +30,5 @@ create_reset -interval 10 -high -waveform SPI_DEV_CLK top_darjeeling.u_spi_devic
 # set_stable_value top_darjeeling.u_spi_device.u_reg.u_control_mode.q -name SpidControlMode -comment {SW changes the CSR when SPI is idle}
 
 # JTAG Reset Test
-# top_darjeeling.u_pinmux_aon.u_pinmux_strap_sampling.tap_strap_q 'b01 for LC_CTRL , 'b10 for RV_DM
-create_reset -interval 100 top_darjeeling.u_pinmux_aon.u_pinmux_strap_sampling.jtag_req.trst_n -name TRST_N -waveform JTAG_TCK
+# top_darjeeling.u_pinmux_aon.gen_hw_strap_sampling.u_pinmux_strap_sampling.tap_strap_q 'b01 for LC_CTRL , 'b10 for RV_DM
+create_reset -interval 100 top_darjeeling.u_pinmux_aon.gen_hw_strap_sampling.u_pinmux_strap_sampling.jtag_req.trst_n -name TRST_N -waveform JTAG_TCK
