[bazel] Do fusesoc builds in the sandbox
Fix up deps and do the fusesoc builds in the sandbox. Since the Python
interpreter was switched to the bazel-provided one, it is now possible
to use the sandbox. Note that this doesn't make the build *hermetic*,
since it still relies on system-provided tools (e.g. vivado, verilator).

Signed-off-by: Alexander Williams <awill@opentitan.org>

--- a/hw/BUILD
+++ b/hw/BUILD
@@ -73,6 +73,8 @@ filegroup(
         "//hw/rdc:all_files",
         "//hw/syn:all_files",
         "//hw/vendor:all_files",
+        "//util:check_tool_requirements.py",
+        "//util:tool_requirements.py",
     ],
     visibility = [":__subpackages__"],
 )
