[top_darjeeling] Instantiate Mailbox SRAM_CTRL
Allocates 4kB for now - need to adjust later if that is not enough.

Co-authored-by: Pirmin Vogel <vogelpi@lowrisc.org>
Signed-off-by: Michael Schaffner <msf@opentitan.org>

--- a/hw/top_darjeeling/ip/xbar_main/dv/autogen/xbar_cover.cfg
+++ b/hw/top_darjeeling/ip/xbar_main/dv/autogen/xbar_cover.cfg
@@ -109,6 +109,14 @@
 -node tb.dut tl_sram_ctrl_main__regs_o.a_address[31:31]
 -node tb.dut tl_sram_ctrl_main__ram_o.a_address[27:16]
 -node tb.dut tl_sram_ctrl_main__ram_o.a_address[31:29]
+-node tb.dut tl_sram_ctrl_mbox__regs_o.a_address[15:5]
+-node tb.dut tl_sram_ctrl_mbox__regs_o.a_address[17:17]
+-node tb.dut tl_sram_ctrl_mbox__regs_o.a_address[23:21]
+-node tb.dut tl_sram_ctrl_mbox__regs_o.a_address[29:25]
+-node tb.dut tl_sram_ctrl_mbox__regs_o.a_address[31:31]
+-node tb.dut tl_sram_ctrl_mbox__ram_o.a_address[23:12]
+-node tb.dut tl_sram_ctrl_mbox__ram_o.a_address[27:25]
+-node tb.dut tl_sram_ctrl_mbox__ram_o.a_address[31:29]
 
 -node tb.dut tl_*.a_source[7:6]
 -node tb.dut tl_*.d_source[7:6]
