--- a/hw/top_darjeeling/dv/autogen/xbar_tgl_excl.cfg
+++ b/hw/top_darjeeling/dv/autogen/xbar_tgl_excl.cfg
@@ -111,6 +111,14 @@
 -node tb.dut*.u_sram_ctrl_main regs_tl_*i.a_address[31:31]
 -node tb.dut*.u_sram_ctrl_main ram_tl_*i.a_address[27:16]
 -node tb.dut*.u_sram_ctrl_main ram_tl_*i.a_address[31:29]
+-node tb.dut*.u_sram_ctrl_mbox regs_tl_*i.a_address[15:5]
+-node tb.dut*.u_sram_ctrl_mbox regs_tl_*i.a_address[17:17]
+-node tb.dut*.u_sram_ctrl_mbox regs_tl_*i.a_address[23:21]
+-node tb.dut*.u_sram_ctrl_mbox regs_tl_*i.a_address[29:25]
+-node tb.dut*.u_sram_ctrl_mbox regs_tl_*i.a_address[31:31]
+-node tb.dut*.u_sram_ctrl_mbox ram_tl_*i.a_address[23:12]
+-node tb.dut*.u_sram_ctrl_mbox ram_tl_*i.a_address[27:25]
+-node tb.dut*.u_sram_ctrl_mbox ram_tl_*i.a_address[31:29]
 -node tb.dut*.u_uart0 tl_*i.a_address[29:6]
 -node tb.dut*.u_uart0 tl_*i.a_address[31:31]
 -node tb.dut*.u_uart1 tl_*i.a_address[15:6]
