[ci] Exclude `sw/top_earlgrey` from SW Build & Test job
We currently cannot build SW for Earlgrey in this repository, see
lowRISC/opentitan-integrated#138.

Signed-off-by: Andreas Kurth <adk@lowrisc.org>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -247,6 +247,7 @@ jobs:
       echo -//quality/... >> "${TARGET_PATTERN_FILE}"
       echo -//third_party/riscv-compliance/... >> "${TARGET_PATTERN_FILE}"
       echo -//hw/... >> "${TARGET_PATTERN_FILE}"
+      echo -//sw/top_earlgrey/... >> "${TARGET_PATTERN_FILE}"
       ./bazelisk.sh cquery \
         --noinclude_aspects \
         --output=starlark \
