[ci] Disable Earlgrey bitstream builds to speed up CI
We only do minimal testing for Earlgrey on the Darjeeling branch
and the FPGA builds are the bottleneck currently.

We hence skip that job for now.

Co-authored-by: Andreas Kurth <adk@lowrisc.org>
Signed-off-by: Michael Schaffner <msf@opentitan.org>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -393,7 +393,8 @@ jobs:
   # Build CW310 variant of the Earl Grey toplevel design using Vivado
   dependsOn:
     - lint
-  condition: and(succeeded(), eq(dependencies.lint.outputs['DetermineBuildType.onlyDocChanges'], '0'), eq(dependencies.lint.outputs['DetermineBuildType.onlyDvChanges'], '0'), eq(dependencies.lint.outputs['DetermineBuildType.onlyCdcChanges'], '0'))
+  condition: false # currently disabled in Integrated repo
+  # condition: and(succeeded(), eq(dependencies.lint.outputs['DetermineBuildType.onlyDocChanges'], '0'), eq(dependencies.lint.outputs['DetermineBuildType.onlyDvChanges'], '0'), eq(dependencies.lint.outputs['DetermineBuildType.onlyCdcChanges'], '0'))
   pool: ci-public-eda
   timeoutInMinutes: 240
   steps:
@@ -407,7 +408,8 @@ jobs:
   # Build CW310-hyperdebug variant of the Earl Grey toplevel design using Vivado
   dependsOn:
     - lint
-  condition: and(succeeded(), eq(dependencies.lint.outputs['DetermineBuildType.onlyDocChanges'], '0'), eq(dependencies.lint.outputs['DetermineBuildType.onlyDvChanges'], '0'), eq(dependencies.lint.outputs['DetermineBuildType.onlyCdcChanges'], '0'), eq(variables['Build.SourceBranchName'], 'master'))
+  condition: false # currently disabled in Integrated repo
+  # condition: and(succeeded(), eq(dependencies.lint.outputs['DetermineBuildType.onlyDocChanges'], '0'), eq(dependencies.lint.outputs['DetermineBuildType.onlyDvChanges'], '0'), eq(dependencies.lint.outputs['DetermineBuildType.onlyCdcChanges'], '0'), eq(variables['Build.SourceBranchName'], 'master'))
   pool: ci-public-eda
   timeoutInMinutes: 240
   steps:
@@ -452,16 +454,16 @@ jobs:
     vmImage: ubuntu-20.04
   dependsOn:
     - chip_darjeeling_cw310
-    - chip_earlgrey_cw310
-    - chip_earlgrey_cw310_hyperdebug
+    # - chip_earlgrey_cw310 # currently disabled in Integrated repo
+    # - chip_earlgrey_cw310_hyperdebug # currently disabled in Integrated repo
   condition: eq(variables['Build.SourceBranchName'], 'master')
   steps:
     - template: ci/download-artifacts-template.yml
       parameters:
         downloadPartialBuildBinFrom:
           - chip_darjeeling_cw310
-          - chip_earlgrey_cw310
-          - chip_earlgrey_cw310_hyperdebug
+          # - chip_earlgrey_cw310 # currently disabled in Integrated repo
+          # - chip_earlgrey_cw310_hyperdebug # currently disabled in Integrated repo
     - bash: |
         set -x
         . util/build_consts.sh
@@ -469,8 +471,8 @@ jobs:
       parameters:
         fragmentFiles:
           - "$BIN_DIR/hw/top_darjeeling/chip_darjeeling_cw310/manifest.json"
-          - "$BIN_DIR/hw/top_earlgrey/chip_earlgrey_cw310/manifest.json"
-          - "$BIN_DIR/hw/top_earlgrey/chip_earlgrey_cw310_hyperdebug/manifest.json"
+          # - "$BIN_DIR/hw/top_earlgrey/chip_earlgrey_cw310/manifest.json" # currently disabled in Integrated repo
+          # - "$BIN_DIR/hw/top_earlgrey/chip_earlgrey_cw310_hyperdebug/manifest.json" # currently disabled in Integrated repo
         gcpKeyFile: "gcpkey.json"
         bucketURI: "gs://opentitan-bitstreams-integrated-a/master"
 
@@ -553,7 +555,7 @@ jobs:
     - sw_build
     - execute_verilated_tests_darjeeling
     - chip_darjeeling_cw310
-    - chip_earlgrey_cw310
+    # - chip_earlgrey_cw310 # currently disabled in Integrated repo
     - chip_englishbreakfast_verilator
   condition: and(eq(dependencies.lint.outputs['DetermineBuildType.onlyDocChanges'], '0'), eq(dependencies.lint.outputs['DetermineBuildType.onlyDvChanges'], '0'), eq(dependencies.lint.outputs['DetermineBuildType.onlyCdcChanges'], '0'))
   steps:
@@ -565,7 +567,7 @@ jobs:
         - sw_build
         - execute_verilated_tests_darjeeling
         - chip_darjeeling_cw310
-        - chip_earlgrey_cw310
+        # - chip_earlgrey_cw310 # currently disabled in Integrated repo
         - chip_englishbreakfast_verilator
   - bash: |
       . util/build_consts.sh
