--- a/hw/top_darjeeling/ip/xbar_peri/dv/autogen/xbar_cover.cfg
+++ b/hw/top_darjeeling/ip/xbar_peri/dv/autogen/xbar_cover.cfg
@@ -21,99 +21,102 @@
 -moduletree prim_cdc_rand_delay  // exclude DV construct.
 
 // [UNR] these device address bits are always 0
--node tb.dut tl_uart0_o.a_address[29:6]
--node tb.dut tl_uart0_o.a_address[31:31]
--node tb.dut tl_uart1_o.a_address[15:6]
--node tb.dut tl_uart1_o.a_address[29:17]
--node tb.dut tl_uart1_o.a_address[31:31]
--node tb.dut tl_uart2_o.a_address[16:6]
--node tb.dut tl_uart2_o.a_address[29:18]
--node tb.dut tl_uart2_o.a_address[31:31]
--node tb.dut tl_uart3_o.a_address[15:6]
--node tb.dut tl_uart3_o.a_address[29:18]
--node tb.dut tl_uart3_o.a_address[31:31]
+-node tb.dut tl_uart0_o.a_address[15:6]
+-node tb.dut tl_uart0_o.a_address[27:17]
+-node tb.dut tl_uart0_o.a_address[31:30]
+-node tb.dut tl_uart1_o.a_address[23:6]
+-node tb.dut tl_uart1_o.a_address[27:25]
+-node tb.dut tl_uart1_o.a_address[31:30]
+-node tb.dut tl_uart2_o.a_address[15:6]
+-node tb.dut tl_uart2_o.a_address[23:17]
+-node tb.dut tl_uart2_o.a_address[27:25]
+-node tb.dut tl_uart2_o.a_address[31:30]
+-node tb.dut tl_uart3_o.a_address[16:6]
+-node tb.dut tl_uart3_o.a_address[23:18]
+-node tb.dut tl_uart3_o.a_address[27:25]
+-node tb.dut tl_uart3_o.a_address[31:30]
 -node tb.dut tl_i2c0_o.a_address[18:7]
--node tb.dut tl_i2c0_o.a_address[29:20]
--node tb.dut tl_i2c0_o.a_address[31:31]
+-node tb.dut tl_i2c0_o.a_address[27:20]
+-node tb.dut tl_i2c0_o.a_address[31:30]
 -node tb.dut tl_i2c1_o.a_address[15:7]
--node tb.dut tl_i2c1_o.a_address[18:17]
--node tb.dut tl_i2c1_o.a_address[29:20]
--node tb.dut tl_i2c1_o.a_address[31:31]
--node tb.dut tl_i2c2_o.a_address[16:7]
--node tb.dut tl_i2c2_o.a_address[18:18]
--node tb.dut tl_i2c2_o.a_address[29:20]
--node tb.dut tl_i2c2_o.a_address[31:31]
--node tb.dut tl_gpio_o.a_address[17:6]
--node tb.dut tl_gpio_o.a_address[29:19]
--node tb.dut tl_gpio_o.a_address[31:31]
+-node tb.dut tl_i2c1_o.a_address[23:18]
+-node tb.dut tl_i2c1_o.a_address[27:25]
+-node tb.dut tl_i2c1_o.a_address[31:30]
+-node tb.dut tl_i2c2_o.a_address[17:7]
+-node tb.dut tl_i2c2_o.a_address[23:19]
+-node tb.dut tl_i2c2_o.a_address[27:25]
+-node tb.dut tl_i2c2_o.a_address[31:30]
+-node tb.dut tl_gpio_o.a_address[27:6]
+-node tb.dut tl_gpio_o.a_address[31:30]
+-node tb.dut tl_spi_host0_o.a_address[19:6]
+-node tb.dut tl_spi_host0_o.a_address[27:22]
+-node tb.dut tl_spi_host0_o.a_address[31:30]
 -node tb.dut tl_spi_device_o.a_address[15:13]
--node tb.dut tl_spi_device_o.a_address[17:17]
--node tb.dut tl_spi_device_o.a_address[29:19]
--node tb.dut tl_spi_device_o.a_address[31:31]
+-node tb.dut tl_spi_device_o.a_address[19:17]
+-node tb.dut tl_spi_device_o.a_address[27:22]
+-node tb.dut tl_spi_device_o.a_address[31:30]
 -node tb.dut tl_rv_timer_o.a_address[19:9]
--node tb.dut tl_rv_timer_o.a_address[29:21]
--node tb.dut tl_rv_timer_o.a_address[31:31]
+-node tb.dut tl_rv_timer_o.a_address[27:21]
+-node tb.dut tl_rv_timer_o.a_address[31:30]
 -node tb.dut tl_pwrmgr_aon_o.a_address[21:7]
--node tb.dut tl_pwrmgr_aon_o.a_address[29:23]
--node tb.dut tl_pwrmgr_aon_o.a_address[31:31]
+-node tb.dut tl_pwrmgr_aon_o.a_address[27:23]
+-node tb.dut tl_pwrmgr_aon_o.a_address[31:30]
 -node tb.dut tl_rstmgr_aon_o.a_address[15:7]
 -node tb.dut tl_rstmgr_aon_o.a_address[21:17]
--node tb.dut tl_rstmgr_aon_o.a_address[29:23]
--node tb.dut tl_rstmgr_aon_o.a_address[31:31]
+-node tb.dut tl_rstmgr_aon_o.a_address[27:23]
+-node tb.dut tl_rstmgr_aon_o.a_address[31:30]
 -node tb.dut tl_clkmgr_aon_o.a_address[16:7]
 -node tb.dut tl_clkmgr_aon_o.a_address[21:18]
--node tb.dut tl_clkmgr_aon_o.a_address[29:23]
--node tb.dut tl_clkmgr_aon_o.a_address[31:31]
+-node tb.dut tl_clkmgr_aon_o.a_address[27:23]
+-node tb.dut tl_clkmgr_aon_o.a_address[31:30]
 -node tb.dut tl_pinmux_aon_o.a_address[16:12]
 -node tb.dut tl_pinmux_aon_o.a_address[21:19]
--node tb.dut tl_pinmux_aon_o.a_address[29:23]
--node tb.dut tl_pinmux_aon_o.a_address[31:31]
+-node tb.dut tl_pinmux_aon_o.a_address[27:23]
+-node tb.dut tl_pinmux_aon_o.a_address[31:30]
 -node tb.dut tl_otp_ctrl__core_o.a_address[15:13]
 -node tb.dut tl_otp_ctrl__core_o.a_address[19:18]
--node tb.dut tl_otp_ctrl__core_o.a_address[29:21]
--node tb.dut tl_otp_ctrl__core_o.a_address[31:31]
--node tb.dut tl_otp_ctrl__prim_o.a_address[12:5]
--node tb.dut tl_otp_ctrl__prim_o.a_address[15:14]
+-node tb.dut tl_otp_ctrl__core_o.a_address[27:21]
+-node tb.dut tl_otp_ctrl__core_o.a_address[31:30]
+-node tb.dut tl_otp_ctrl__prim_o.a_address[13:5]
+-node tb.dut tl_otp_ctrl__prim_o.a_address[15:15]
 -node tb.dut tl_otp_ctrl__prim_o.a_address[19:18]
--node tb.dut tl_otp_ctrl__prim_o.a_address[29:21]
--node tb.dut tl_otp_ctrl__prim_o.a_address[31:31]
+-node tb.dut tl_otp_ctrl__prim_o.a_address[27:21]
+-node tb.dut tl_otp_ctrl__prim_o.a_address[31:30]
 -node tb.dut tl_lc_ctrl_o.a_address[17:8]
 -node tb.dut tl_lc_ctrl_o.a_address[19:19]
--node tb.dut tl_lc_ctrl_o.a_address[29:21]
--node tb.dut tl_lc_ctrl_o.a_address[31:31]
--node tb.dut tl_sensor_ctrl_o.a_address[15:6]
--node tb.dut tl_sensor_ctrl_o.a_address[18:17]
--node tb.dut tl_sensor_ctrl_o.a_address[21:20]
--node tb.dut tl_sensor_ctrl_o.a_address[29:23]
--node tb.dut tl_sensor_ctrl_o.a_address[31:31]
+-node tb.dut tl_lc_ctrl_o.a_address[27:21]
+-node tb.dut tl_lc_ctrl_o.a_address[31:30]
+-node tb.dut tl_sensor_ctrl_o.a_address[16:6]
+-node tb.dut tl_sensor_ctrl_o.a_address[27:18]
+-node tb.dut tl_sensor_ctrl_o.a_address[31:30]
 -node tb.dut tl_alert_handler_o.a_address[15:11]
 -node tb.dut tl_alert_handler_o.a_address[17:17]
 -node tb.dut tl_alert_handler_o.a_address[19:19]
--node tb.dut tl_alert_handler_o.a_address[29:21]
--node tb.dut tl_alert_handler_o.a_address[31:31]
+-node tb.dut tl_alert_handler_o.a_address[27:21]
+-node tb.dut tl_alert_handler_o.a_address[31:30]
 -node tb.dut tl_sram_ctrl_ret_aon__regs_o.a_address[19:5]
 -node tb.dut tl_sram_ctrl_ret_aon__regs_o.a_address[21:21]
--node tb.dut tl_sram_ctrl_ret_aon__regs_o.a_address[29:23]
--node tb.dut tl_sram_ctrl_ret_aon__regs_o.a_address[31:31]
+-node tb.dut tl_sram_ctrl_ret_aon__regs_o.a_address[27:23]
+-node tb.dut tl_sram_ctrl_ret_aon__regs_o.a_address[31:30]
 -node tb.dut tl_sram_ctrl_ret_aon__ram_o.a_address[20:12]
--node tb.dut tl_sram_ctrl_ret_aon__ram_o.a_address[29:23]
--node tb.dut tl_sram_ctrl_ret_aon__ram_o.a_address[31:31]
+-node tb.dut tl_sram_ctrl_ret_aon__ram_o.a_address[27:23]
+-node tb.dut tl_sram_ctrl_ret_aon__ram_o.a_address[31:30]
 -node tb.dut tl_aon_timer_aon_o.a_address[15:6]
 -node tb.dut tl_aon_timer_aon_o.a_address[21:19]
--node tb.dut tl_aon_timer_aon_o.a_address[29:23]
--node tb.dut tl_aon_timer_aon_o.a_address[31:31]
--node tb.dut tl_sysrst_ctrl_aon_o.a_address[15:8]
--node tb.dut tl_sysrst_ctrl_aon_o.a_address[21:18]
--node tb.dut tl_sysrst_ctrl_aon_o.a_address[29:23]
--node tb.dut tl_sysrst_ctrl_aon_o.a_address[31:31]
--node tb.dut tl_adc_ctrl_aon_o.a_address[17:7]
--node tb.dut tl_adc_ctrl_aon_o.a_address[21:19]
--node tb.dut tl_adc_ctrl_aon_o.a_address[29:23]
--node tb.dut tl_adc_ctrl_aon_o.a_address[31:31]
+-node tb.dut tl_aon_timer_aon_o.a_address[27:23]
+-node tb.dut tl_aon_timer_aon_o.a_address[31:30]
+-node tb.dut tl_sysrst_ctrl_aon_o.a_address[16:8]
+-node tb.dut tl_sysrst_ctrl_aon_o.a_address[23:19]
+-node tb.dut tl_sysrst_ctrl_aon_o.a_address[27:25]
+-node tb.dut tl_sysrst_ctrl_aon_o.a_address[31:30]
+-node tb.dut tl_adc_ctrl_aon_o.a_address[15:7]
+-node tb.dut tl_adc_ctrl_aon_o.a_address[23:19]
+-node tb.dut tl_adc_ctrl_aon_o.a_address[27:25]
+-node tb.dut tl_adc_ctrl_aon_o.a_address[31:30]
 -node tb.dut tl_ast_o.a_address[18:10]
 -node tb.dut tl_ast_o.a_address[21:20]
--node tb.dut tl_ast_o.a_address[29:23]
--node tb.dut tl_ast_o.a_address[31:31]
+-node tb.dut tl_ast_o.a_address[27:23]
+-node tb.dut tl_ast_o.a_address[31:30]
 
 begin tgl
   -tree tb
